--- a/app/src/main/res/layout/item_timeline.xml
+++ b/app/src/main/res/layout/item_timeline.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:layout_marginLeft="50dp"
-    android:layout_marginRight="50dp" >
+    android:layout_marginRight="50dp">
 
     <com.github.vipulasri.timelineview.TimelineView
         android:id="@+id/timeline"
@@ -32,9 +32,9 @@
         android:layout_marginEnd="30dp"
         android:layout_gravity="center_vertical"
         android:clickable="true"
-        app:cardBackgroundColor="@color/grey_light"
+        app:cardBackgroundColor="?attr/cardBackgroundColor"
         app:contentPadding="15dp"
-        app:cardElevation="1dp" >
+        app:cardElevation="1dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -54,14 +54,16 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/textViewTimelineDatum"
                     android:textSize="12sp"
-                    tools:text="Testdatum"/>
+                    tools:text="Testdatum"
+                    android:textColor="@color/black"/>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:id="@+id/textViewTimelineBeschreibung"
-                    tools:text="Testbeschreibung"/>
+                    tools:text="Testbeschreibung"
+                    android:textColor="@color/black"/>
 
             </LinearLayout>
 
