--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="grey_light">#f1f2f6</color>
-    <color name="branding_purple">#778beb</color>
-    <color name="branding_dark_purple">#474787</color>
+
+    <color name="grey_light">#F5F5F5</color>
+    <color name="grey">#9E9E9E</color>
+
+    <color name="purple">#B39DDB</color>
+    <color name="purple_light">#D1C4E9</color>
+    <color name="lila">#7E57C2</color>
+
+    <color name="pink">#EF9A9A</color>
+
+    <color name="blau">#3F51B5</color>
+
+
 </resources>
