--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,20 +1,27 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
+
     <!-- Base application theme. -->
     <style name="Theme.Tankauswertung" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/lila</item>    <!-- Überschrift/Titel -->
+        <item name="colorPrimaryVariant">@color/white</item>  <!-- kopfleiste -->
         <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+
+         <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/purple_light</item>    <!-- KREISE VON SLEEKBAR-->
+        <item name="colorSecondaryVariant">@color/white</item>    <!-- HOCHSWIPE DING -->
+        <item name="colorOnSecondary">@color/white</item> <!-- das + im hinzufügen knopf und die schrift -->
+
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+
         <!-- Customize your theme here. -->
+        <item name="cardBackgroundColor" >@color/grey_light</item>
+
     </style>
 
     <style name="Theme.NavDrawer.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
     <style name="Theme.NavDrawer.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 </resources>
