StatsFragment.java und NewCarActivity.java aufgeräumt, Hardcoded Strings entfernt

--- a/app/src/main/res/layout/fragment_stats.xml
+++ b/app/src/main/res/layout/fragment_stats.xml
@@ -89,7 +89,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:text="Woche"
+        android:text="@string/woche"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/buttonMonat"
         app:layout_constraintStart_toStartOf="parent" />
@@ -99,7 +99,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:text="Monat"
+        android:text="@string/monat"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/buttonJahr"
         app:layout_constraintStart_toEndOf="@+id/buttonWoche" />
@@ -109,7 +109,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:text="Jahr"
+        android:text="@string/jahr"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/buttonMonat" />
@@ -119,7 +119,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textMultiLine|textNoSuggestions"
-        android:text="20.11.20 - 20.12.20"
+        android:text=""
         android:textAlignment="center"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -134,7 +134,7 @@
         android:id="@+id/textViewTitel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Treibstoffverbrauch"
+        android:text=""
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/fragment_verticalbarchart_chart"
