--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -2,8 +2,11 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:centerColor="#009688"
-        android:endColor="#00695C"
-        android:startColor="#4DB6AC"
+        android:centerColor="@color/grey_light"
+        android:endColor="@color/grey"
+        android:startColor="@color/grey"
         android:type="linear" />
+        <!--android:centerColor="#009688"
+        android:endColor="#00695C"
+        android:startColor="#4DB6AC"-->
 </shape>
