--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -10,27 +10,46 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="10dip">
+            android:orientation="vertical">
 
-            <!-- Text Label -->
-            <TextView
-                android:layout_width="fill_parent"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dip"
-                android:layout_marginBottom="5dp"
-                android:text="@string/dark_mode"
-                android:textSize="20sp" />
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginTop="20dp"
+                android:orientation="vertical">
 
-            <!-- Spinner Element -->
-            <Spinner
-                android:id="@+id/spinnerDarkMode"
-                android:layout_width="fill_parent"
+                <!-- Text Label -->
+
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="@string/theme" />
+
+                <!-- Dropdown Dark Mode -->
+
+                <Spinner
+                    android:id="@+id/spinnerDarkMode"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:prompt="@string/dark_mode" />
+
+            </LinearLayout>
+
+            <ListView
+                android:id="@+id/listViewLicenses"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:prompt="@string/dark_mode" />
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toTopOf="@id/spinnerDarkMode" />
+
         </LinearLayout>
+
     </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
