--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -6,6 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.dashboard.DashboardFragment">
 
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -17,156 +18,196 @@
             android:layout_marginRight="30dp"
             android:orientation="vertical">
 
-
-            <TextView
-                android:id="@+id/TextViewName"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:textSize="24sp"
-                android:layout_marginTop="15dp"/>
+            <!-- Anzeigename -->
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="10dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginTop="45dp"
+                android:layout_marginBottom="35dp">
 
-                <!-- CheckBox Elektrofahrzeug -->
-
-                <CheckBox
-                    android:id="@+id/ViewElektro"
-                    android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/TextViewName"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:enabled="false"
-                    android:text="@string/elektrofahrzeug"/>
+                    android:layout_margin="10dp"
+                    android:gravity="center"
+                    android:text="Mein Auto"
+                    android:textSize="40sp" />
 
             </LinearLayout>
 
-            <!-- Verbrauch innerorts -->
+            <!-- Aktueller Tankstand anzeige-->
 
-            <TextView
-                android:id="@+id/labelVerbrauchInnerortsTitel"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:textSize="18dp"
-                android:text="@string/verbrauch_innerorts_l_100km"/>
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/TextViewAktuellerTankstand"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="40%"
+                    android:textSize="20sp" />
 
 
-            <TextView
-                android:id="@+id/TextViewVerbrauchInnerortsStand"
-                android:layout_width="45dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:gravity="center"
-                android:textSize="18sp" />
-
-            <!-- Verbrauch außerorts -->
-
-            <TextView
-                android:id="@+id/labelVerbrauchAusserortsTitel"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:textSize="18dp"
-                android:text="@string/verbrauch_au_erorts_l_100km" />
-
-            <TextView
-                android:id="@+id/TextViewVerbrauchAusserortsStand"
-                android:layout_width="45dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:gravity="center"
-                android:textSize="18sp" />
-
-            <!-- Verbrauch kombiniert -->
-
-            <TextView
-                android:id="@+id/labelVerbrauchKombiniertTitel"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:textSize="18dp"
-                android:text="@string/verbrauch_kombiniert_l_100km"/>
-
-            <TextView
-                android:id="@+id/TextViewVerbrauchKombiniertStand"
-                android:layout_width="45dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:gravity="center"
-                android:textSize="18sp" />
-
-            <!-- CO2-Ausstoß -->
-            <TextView
-                android:id="@+id/labelCo2Ausstoss"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:textSize="18dp"
-                android:text="@string/co2_ausstoss_g_km"/>
-
-            <TextView
-                android:id="@+id/TextViewCo2"
-                android:layout_width="45dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:gravity="center"
-                android:textSize="18sp" />
-
-            <!-- Kilometerstand -->
-
-            <TextView
-                android:id="@+id/labelKilometerstand"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:textSize="18dp"
-                android:text="@string/kilometerstand_km"/>
-
-            <TextView
-                android:id="@+id/TextViewKilometerstand"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:textSize="18sp" />
-
-            <!-- Tankvolumen -->
-
-            <TextView
-                android:id="@+id/labelTankvolumen"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:textSize="18dp"
-                android:text="@string/tankvolumen_l" />
-
-            <TextView
-                android:id="@+id/TextViewTankvolumen"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:textSize="18sp" />
+            </LinearLayout>
 
             <!-- Aktueller Tankstand -->
 
-                    <TextView
-                        android:id="@+id/labelAktuellerTankstandTitel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
-                        android:text="@string/tankstand_l"
-                        android:textSize="18dp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginBottom="25dp">
+
+                <TextView
+                    android:id="@+id/labelAktuellerTankstandTitel"
+                    android:layout_width="match_parent"
+                    android:textAlignment="center"
+                    android:layout_height="wrap_content"
+                    android:text="@string/tankstand_l"
+                    android:layout_margin="10dp"
+                    android:textSize="28sp" />
+
+            </LinearLayout>
+
+            <!-- Tabelle -->
+
+            <TableLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content">
+
+                <TableRow>
+
+                    <!-- Kilometerstand anzeige -->
 
                     <TextView
-                        android:id="@+id/TextViewAktuellerTankstandStand"
-                        android:layout_width="325dp"
-                        android:layout_height="42dp"
-                        android:layout_alignParentBottom="true"
-                        android:layout_marginStart="15dp"
-                        android:layout_marginBottom="15dp"
-                        android:textSize="18dp" />
+                        android:id="@+id/TextViewKilometerstand"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:textSize="25sp"
+                        android:text="100 000"
+                        android:textStyle="bold"/>
+
+                    <!-- Verbrauch anzeige-->
+
+                    <TextView
+                        android:id="@+id/TextViewVerbrauch"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:textSize="25sp"
+                        android:textStyle="bold"
+                        android:text="5,8"/>
+
+                </TableRow>
+
+                <TableRow
+                    android:layout_marginBottom="15dp">
+
+                    <!-- Kilometerstand -->
+
+                    <TextView
+                        android:id="@+id/labelKilometerstand"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textSize="18sp"
+                        android:layout_margin="10dp"
+                        android:gravity="center"
+                        android:text="@string/kilometerstand_km"/>
+
+                    <!-- Verbrauch -->
+
+                    <TextView
+                        android:id="@+id/labelVerbrauch"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textSize="18sp"
+                        android:layout_margin="10dp"
+                        android:gravity="center"
+                        android:text="@string/verbrauch_durchschnittlich"/>
+
+                </TableRow>
+
+                <View style="@style/Divider.Horizontal"/>
+
+                <TableRow
+                    android:layout_marginTop="20dp">
+
+                    <!-- Reichweite anzeige -->
+
+                    <TextView
+                        android:id="@+id/TextViewReichweite"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textSize="25sp"
+                        android:gravity="center"
+                        android:textStyle="bold"
+                        android:text="100 000"/>
+
+                    <!-- CO2-Ausstoß anzeigen -->
+
+                    <TextView
+                        android:id="@+id/TextViewCo2"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textSize="25sp"
+                        android:gravity="center"
+                        android:textStyle="bold"
+                        android:text="5,8"/>
+
+                </TableRow>
+
+                <TableRow>
+
+                    <!-- Reichweite -->
+
+                    <TextView
+                        android:id="@+id/labelReichweite"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textSize="18sp"
+                        android:gravity="center"
+                        android:layout_margin="10dp"
+                        android:text="@string/Reichweite" />
+
+                    <!-- CO2-Ausstoß-->
+
+                    <TextView
+                        android:id="@+id/labelCo2"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textSize="18sp"
+                        android:gravity="center"
+                        android:layout_margin="10dp"
+                        android:text="@string/co2_ausstoss"/>
+
+                </TableRow>
+
+
+            </TableLayout>
+
+                <ProgressBar
+                    android:id="@+id/simpleProgressBar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:max="100"
+                    android:min="0"
+                    android:layout_marginTop="100dp"/>
+
 
         </LinearLayout>
 
