--- a/app/src/main/res/layout/fragment_new_car.xml
+++ b/app/src/main/res/layout/fragment_new_car.xml
@@ -29,6 +29,7 @@
                 android:textSize="24sp" />
 
             <LinearLayout
+                android:id="@+id/groupElektro"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
