Helles Thema fertig

--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -2,7 +2,7 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:centerColor="@color/grey_light"
+        android:centerColor="@color/white_darker"
         android:endColor="@color/grey"
         android:startColor="@color/grey"
         android:type="linear" />
