--- a/app/src/main/res/layout/app_bar_new_car.xml
+++ b/app/src/main/res/layout/app_bar_new_car.xml
@@ -8,15 +8,13 @@
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/Theme.NavDrawer.AppBarOverlay">
+        android:layout_height="wrap_content">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/Theme.NavDrawer.PopupOverlay" />
+            android:theme="@style/Theme.Tankauswertung.Toolbar" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
