--- a/app/src/main/res/layout/fragment_forecast.xml
+++ b/app/src/main/res/layout/fragment_forecast.xml
@@ -58,6 +58,7 @@
                     android:layout_width="24dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
+                    style="@style/Theme.Tankauswertung.DarkTextView"
                     android:text="@string/hundred_number" />
 
                 <SeekBar
@@ -92,6 +93,7 @@
                     android:layout_width="24dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
+                    style="@style/Theme.Tankauswertung.DarkTextView"
                     android:text="@string/zero_number" />
 
                 <SeekBar
@@ -126,6 +128,7 @@
                     android:layout_width="24dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
+                    style="@style/Theme.Tankauswertung.DarkTextView"
                     android:text="@string/zero_number" />
 
                 <SeekBar
@@ -157,7 +160,7 @@
                 android:layout_marginTop="10dp"
                 android:textSize="24sp"
                 android:text="@string/geschaetzte_werte"
-                android:textColor="@color/black"
+                style="@style/Theme.Tankauswertung.DarkTextView"
             />
 
             <!-- Kraftstoffverbrauch -->
@@ -174,7 +177,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
-                android:textColor="@color/black"
+                style="@style/Theme.Tankauswertung.DarkTextView"
                 android:text="@string/idle" />
 
             <!-- Kraftstoffkosten -->
@@ -191,7 +194,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
-                android:textColor="@color/black"
+                style="@style/Theme.Tankauswertung.DarkTextView"
                 android:text="@string/idle" />
 
             <!-- Anzahl nötiger Tankvorgänge -->
@@ -208,7 +211,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
-                android:textColor="@color/black"
+                style="@style/Theme.Tankauswertung.DarkTextView"
                 android:text="@string/idle" />
 
             <!-- CO2-Ausstoß -->
@@ -226,7 +229,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="50dp"
                 android:textSize="18sp"
-                android:textColor="@color/black"
+                style="@style/Theme.Tankauswertung.DarkTextView"
                 android:text="@string/idle" />
 
         </LinearLayout>
