--- a/app/src/main/res/layout/fragment_new_car.xml
+++ b/app/src/main/res/layout/fragment_new_car.xml
@@ -233,6 +233,7 @@
                     android:layout_width="24dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
+                    style="@style/Theme.Tankauswertung.DarkTextView"
                     android:text="@string/zero_number" />
 
                 <SeekBar
