--- a/app/src/main/res/layout/fragment_stats.xml
+++ b/app/src/main/res/layout/fragment_stats.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_weight="1"
+        style="@style/Theme.Tankauswertung.ImageButton"
         app:layout_constraintEnd_toStartOf="@+id/imageButtonTreibstoff"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -22,6 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_weight="1"
+        style="@style/Theme.Tankauswertung.ImageButton"
         app:layout_constraintEnd_toStartOf="@+id/imageButtonTankkosten"
         app:layout_constraintStart_toEndOf="@+id/imageButtonStrecken"
         app:layout_constraintTop_toTopOf="parent"
@@ -33,6 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_weight="1"
+        style="@style/Theme.Tankauswertung.ImageButton"
         app:layout_constraintEnd_toStartOf="@+id/imageButtonCO2"
         app:layout_constraintStart_toEndOf="@+id/imageButtonTreibstoff"
         app:layout_constraintTop_toTopOf="parent"
@@ -44,6 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_weight="1"
+        style="@style/Theme.Tankauswertung.ImageButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageButtonTankkosten"
         app:layout_constraintTop_toTopOf="parent"
@@ -57,6 +61,7 @@
         android:layout_marginBottom="10dp"
         android:text=""
         android:textSize="21sp"
+        style="@style/Theme.Tankauswertung.DarkTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageButtonStrecken" />
@@ -74,8 +79,8 @@
 
     <ImageButton
         android:id="@+id/buttonFrueher"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_marginTop="10dp"
         android:layout_marginStart="50dp"
         android:background="?android:selectableItemBackground"
@@ -86,8 +91,8 @@
 
     <ImageButton
         android:id="@+id/buttonSpaeter"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="50dp"
         android:background="?android:selectableItemBackground"
@@ -100,22 +105,24 @@
         android:id="@+id/textViewZeitraum"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="21dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="61dp"
         android:text=""
         android:textAlignment="center"
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/buttonSpaeter"
         app:layout_constraintStart_toEndOf="@+id/buttonFrueher"
         app:layout_constraintTop_toBottomOf="@+id/fragment_verticalbarchart_chart"
+        style="@style/Theme.Tankauswertung.DarkTextView"
         app:layout_constraintBottom_toBottomOf="@id/buttonMonat" />
 
     <Button
         android:id="@+id/buttonWoche"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="20dp"
         android:text="@string/woche"
+        style="@style/Theme.Tankauswertung.Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/buttonMonat"
         app:layout_constraintStart_toStartOf="parent" />
@@ -124,8 +131,9 @@
         android:id="@+id/buttonMonat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="20dp"
         android:text="@string/monat"
+        style="@style/Theme.Tankauswertung.Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/buttonJahr"
         app:layout_constraintStart_toEndOf="@+id/buttonWoche" />
@@ -134,8 +142,9 @@
         android:id="@+id/buttonJahr"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="20dp"
         android:text="@string/jahr"
+        style="@style/Theme.Tankauswertung.Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/buttonMonat" />
